# MyMobile

./: PRIVACY_POLICY_TEMPLATE.md  README-JAVA.md  RuStore_descriptions.md  alta-release-key.keystore  fix-launch-issue.md  gradle.properties  gradlew  gradlew.bat  quick-fix.ps1  settings.gradle.kts  setup-java.bat  setup-java.ps1
app/: UI_IMPROVEMENTS_LOADING_STATES.md  build.gradle.kts
backend/: .gitignore  BACKEND_UPDATE_PROFILE_SYNC.md  DEPLOY.md  DEPLOY_FROM_GIT.md  Dockerfile  README.md  alembic.ini  check-server.sh  connect-and-deploy.ps1  deploy.sh  docker-compose.yml  env.example  full-deploy.sh  nginx.conf  pyproject.toml  setup-server.sh  upload-to-server.ps1
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  0002_step_entries.py  0003_water_entries.py  0004_admin_users.py  0005_families.py  0006_weight_and_smoke.py  0007_food_entries.py  0008_training_entries.py  0009_book_entries.py  0010_xp_events_and_user_achievements.py  0011_sync_queue.py  0012_admin_settings.py  0013_appodeal_settings.py  0014_target_weight_in_user_settings.py  0015_privacy_policy.py  0016_announcement.py  0017_announcements_table.py  0018_family_invites.py  0019_family_goals.py  0020_gigachat_settings.py
backend/app/: __init__.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  settings.py
backend/app/templates/: admin_gigachat.html  admin_settings.html  admin_settings_new.html  ads.html  base.html  integration.html  login.html  register.html  users.html
backend/templates/: admin_settings.html
gradle/: libs.versions.toml
(+298 files in other folders)
